--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -162,10 +162,7 @@ img {
         font-size: 2rem;
     }
 
-    img {
-        height: auto;
-    }
-
+    
     /************************************************
         UTILITIES
     ************************************************/
@@ -183,7 +180,7 @@ img {
 
     .col {
         min-width: 100%;
-        margin-bottom: 60px;
+        margin-bottom: 80px;
     }
 
     /************************************************
@@ -195,6 +192,12 @@ img {
         padding-bottom: 1px;
 
     }
+
+    .lessons .col img,  .steps .col img {
+        height: auto;
+        width: 90%;
+    }
+
     
     .why-us {
         background-color: #222222;
